# massing

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-NOTES.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.claude/: launch.json  settings.json
.claude/hooks/: ruff_fix.py
.claude/skills/: README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cargo-lock.yml  ci.yml  codeql.yml  db-migrations.yml  desktop.yml  lockfile.yml  pages.yml  rust-ci.yml  security.yml
apps/editor-bridge/: README.md  bonsai-mcp.config.json  bridge.py  recipes.py  test_bridge.py
apps/web/: .gitignore  Dockerfile  README.md  eslint.config.js  (+6 more)
apps/web/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs
docs/: ATTRIBUTIONS.md  CNAME  PRODUCTION_CHECKLIST.md  audit-2026-06.md  authoring-matrix.md  authoring-modules.md  capability-matrix.md  client-vs-server.md  competitive-plan.md  cost-db-import-plan.md  cv-bridge.md  deploy.md  developer-portal-roadmap.md  emanager-gap-analysis.md  gc-modules-roadmap.md  gc-portal.md  gc-tools-audit.md  guide.html  improvement-plan.md  index.html  lifecycle-roadmap.md  marketing-copy.md  massing-cloud-bridge.md  mcp.md  mobile.md  operations.md  ops-dr.md  phase2-large-models.md  production-readiness.md  realestate-marketing.md  render-bridge.md  roadmap-completed.md  roadmap-modeling-tools.md  roadmap-platforms.md  roadmap.md  roles-views.md  status.html  status.md  ux-findings.md  ux-ia.md  (+1 more)
plugins/: README.md
scripts/: backup.sh  check-fragments-version.mjs  restore.sh  smoke-stack.sh  validate_prod_config.py
(+1027 files in other folders)
