[package]
name = "aec-bim"
version = "0.1.25"
description = "AEC BIM Platform desktop shell"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aec_bim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"      # spawn the bundled Python backend sidecar
tauri-plugin-updater = "2"    # in-app silent self-update from signed GitHub releases
serde = { version = "1", features = ["derive"] }
serde_json = "1"
