[package]
name = "aec-bim"
version = "0.1.52"
description = "Massing desktop shell"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aec_bim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"      # spawn the bundled Python backend sidecar
tauri-plugin-updater = "2"    # in-app silent self-update from signed GitHub releases
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Pin transitive `time` away from 0.3.52: that release changed the (sealed) Parsable trait's
# parse signature, which `cookie` 0.18.1 (pulled in via tauri-plugin-updater -> reqwest) still
# calls the old way, breaking the desktop build. 0.3.51 is the last version that compiles with it.
# Cargo.lock IS committed and CI runs cargo with --locked (rust-ci.yml / desktop.yml verify the
# lock is in sync), so this pin is now a belt-and-suspenders guard against an accidental `cargo update`.
time = "=0.3.51"
